--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -66,7 +66,7 @@ jobs:
 
       - name: Build conda package
         shell: bash -el {0}
-        run: conda build . --no-anaconda-upload --output-folder=./build -c conda-forge -c accessnri -c coecms
+        run: conda build . --no-anaconda-upload --output-folder=./build -c accessnri -c conda-forge -c coecms
 
       - name: Verify conda package
         shell: bash -el {0}
@@ -94,10 +94,10 @@ jobs:
     - name: Dispatch repo
       uses: peter-evans/repository-dispatch@ff45666b9427631e3450c54a1bcbee4d9ff4d7c0 # v3.0.0
       with:
-        token: ${{ secrets.REPO_ACCESS_TOKEN }}
+        token: ${{ secrets.ADMIN_TOKEN }}
         repository: ${{ github.repository_owner }}/access-ram-condaenv
         event-type: prerelease
         client-payload: |-
           {
-            "token": "${{secrets.REPO_ACCESS_TOKEN}}"
+            "token": "${{secrets.ADMIN_TOKEN}}"
           }
