--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -6,38 +6,9 @@ on:
       - '**' 
 
 jobs:
-  validate-tag:
-    name: Validate tag
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout source
-        uses: actions/checkout@v4
-        with:
-          fetch-tags: true
-          fetch-depth: 0
-      
-      - name: Check no jumps in tags
-        run: |
-          # The format of a tag (version) should be MAJOR.MINOR
-          # If a previous tag is MAJOR.MINOR, valid tags are only MAJOR.(MINOR+1) or (MAJOR+1).0
-          if [[ $(git tag -l | wc -l) != 1 ]]; then # If there is only one tag, no need to check
-            # Find the previous tag
-            prev=$(git tag -l --sort=-v:refname | head -n 2 | tail -n 1)
-            # Split the previous tag into an array of MAJOR and MINOR version components. E.g., for `3.11` it returns the array (3 11)
-            ver_comp=($(tr "." " " <<< $prev))
-            val1="${ver_comp[0]}.$((${ver_comp[1]}+1))" # MAJOR.(MINOR+1)
-            val2="$((${ver_comp[0]}+1)).0" # (MAJOR+1).0
-            if [[ "${{github.ref_name}}" != "$val1" ]] && \
-            [[ "${{github.ref_name}}" != "$val2" ]]; then
-                echo "Invalid tag \"${{github.ref_name}}\" when previous tag is \"$prev\"."
-                exit 1
-            fi
-          fi
-  
   get-package-name:
     name: Get package name
     runs-on: ubuntu-latest
-    needs: validate-tag
     outputs:
       package-name: ${{ steps.get-package-name.outputs.package-name }}
     steps:
@@ -55,7 +26,7 @@ jobs:
   release-conda-package:
     name: Build with conda and release
     runs-on: ubuntu-latest
-    needs: [get-package-name, validate-tag]
+    needs: get-package-name
     env:
       BUILD_FOLDER: ${{github.workspace}}/build
       PACKAGE_PATH: ${{github.workspace}}/build/noarch/*.tar.bz2
