--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ keywords = ["ACCESS-RAM", "Regional Nesting Suite", "era5grib"]
 dynamic = ["version"]
 dependencies = [
     "python >=3.10,<=3.12",
+    "cdo",
     "numpy <2",
     "pandas",
     "versioneer",
