Renamed token to pass to the client-payload of the repository dispatch job to NO_PERMISSIONS_TOKEN

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -92,5 +92,5 @@ jobs:
         event-type: prerelease
         client-payload: |-
           {
-            "token": "${{secrets.ADMIN_TOKEN}}"
+            "token": "${{secrets.NO_PERMISSIONS_TOKEN}}"
           }
